--- a/.github/workflows/pushtoaws.yml
+++ b/.github/workflows/pushtoaws.yml
@@ -26,7 +26,10 @@ jobs:
       
     - name: Terraform Init
       run: terraform init
-      
+    
+    - name: Terraform format
+      run: terraform fmt -check
+
     - name: Terraform Plan
       run: terraform plan
       
